--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>cloud-provider-payment8001</artifactId>
 
     <dependencies>
+        <!--增加自己的共用类-->
+        <dependency>
+            <groupId>com.xiaofsu</groupId>
+            <artifactId>cloud-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!--包含了sleuth+zipkin-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
