--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -1,2 +1,17 @@
 server:
   port: 80
+
+
+eureka:
+  client:
+    # 表示是否将自身 注册到eurekaServer，默认为True
+    register-with-eureka: true
+    # 是否从EurekaServer中获取当前已有的注册信息，默认为true,集群必须为True才能使用Ribbon负载均衡
+    fetch-registry: true
+    # 服务注册地址
+    service-url:
+      defaultZone: http://localhost:7001/eureka
+
+spring:
+  application:
+    name: cloud-order-service
