--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -9,4 +9,7 @@ eureka:
     fetch-registry: false #表示自己端为服务端，不需要检索服务。
     service-url:
       #设置与eureka server交互的地址查询服务和注册服务需要依赖这个地址。
-      defaultZone: http://eureka7002.com:7002/eureka
+      defaultZone: http://eureka7001.com:7001/eureka
+  server:
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 2000
