eureka中自带ribbon，负载均衡默认为轮询查询策略，可以自定义为随机查询策略。

--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -22,8 +22,8 @@ eureka:
     fetch-registry: true
     # 服务注册地址
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka
-      #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+    #defaultZone: http://eureka7001.com:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
 
   instance:
     instance-id: payment8001
